--- a/cloud.html
+++ b/cloud.html
@@ -10,6 +10,11 @@
 
 <body>
     <h1>minh cloud</h1>
+    <ul>
+        <li><a href="/cloud">cloud</a></li>
+        <li><a href="/greenwich">greenwich</a></li>
+        <li><a href="/">home</a></li>
+    </ul>
 </body>
 
 </html>
