--- a/greenwich.html
+++ b/greenwich.html
@@ -10,6 +10,11 @@
 
 <body>
     <h1 href="./cloud.html">greenwich</h1>
+    <ul>
+        <li><a href="/cloud">cloud</a></li>
+        <li><a href="/greenwich">greenwich</a></li>
+        <li><a href="/">home</a></li>
+    </ul>
 </body>
 
 </html>
