--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="/cloud">cloud</a></li>
         <li><a href="/greenwich">greenwich</a></li>
+        <li><a href="/">home</a></li>
     </ul>
 </body>
 
